<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AddShow"

    android:layout_gravity="center"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".AddShowActivity">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="1"
        android:layout_marginBottom="5pt"
        android:rowCount="10">
        <TextView
            android:text="@string/show_title"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
        <EditText
            android:id="@+id/NameText"
            android:inputType="text"
            android:hint="@string/show_title" />

        <TextView
            android:text="@string/total_episodes"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
        <EditText
            android:id="@+id/TotalEpisodes"
            android:inputType="number"
            android:hint="@string/total_episodes"/>
        <TextView
            android:text="@string/currently_watched_episodes"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
        <EditText
            android:id="@+id/CurrentEpisodes"
            android:inputType="number"
            android:hint="@string/currently_watched_episodes"/>
        <TextView
            android:text="@string/rating"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
        <Spinner
            android:id="@+id/rating_spinner"
            android:spinnerMode="dropdown"
            android:drawSelectorOnTop="true"
            android:layout_height="17pt"
            android:prompt="@string/ratingspin"
            android:entries="@array/rating_items"/>

        <!--TODO need to change to a drop down for status-->
        <TextView
            android:text="@string/status"
            android:textColor="@color/black"
            android:background="@color/grey"
            android:textAllCaps="true"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
        <Spinner
            android:id="@+id/status_spinner"
            android:spinnerMode="dropdown"
            android:drawSelectorOnTop="true"
            android:layout_height="17pt"
            android:prompt="@string/statusspin"
            android:entries="@array/spinnerItems"/>
        <!--TODO Need to potentially change Date to a calendar selector-->

        <Button
            android:id="@+id/AddButton"
            android:text="@string/add_show"
            android:onClick="addShow"/>

    </TableLayout>
</FrameLayout>